Refactor User-Agent header with Map.of